setup tmux setssion management

--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -19,6 +19,7 @@
 "nvim/lua/core/nvchad_config.lua" = "/home/alchemmist/.config/nvim/lua/core/nvchad_config.lua"
 "nvim/lua/core/utils.lua" = "/home/alchemmist/.config/nvim/lua/core/utils.lua"
 "nvim/lua/plugins/configs/cmp.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/cmp.lua"
+"nvim/lua/plugins/configs/conform.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/conform.lua"
 "nvim/lua/plugins/configs/java.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/java.lua"
 "nvim/lua/plugins/configs/lazy_nvim.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lazy_nvim.lua"
 "nvim/lua/plugins/configs/lspconfig.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lspconfig.lua"
@@ -48,6 +49,7 @@
 "scripts/toggle_caffeine.sh" = "/home/alchemmist/scripts/toggle_caffeine.sh"
 "scripts/vpn-toggler.sh" = "/home/alchemmist/scripts/vpn-toggler.sh"
 "scripts/wallpaper_pack_selector.sh" = "/home/alchemmist/scripts/wallpaper_pack_selector.sh"
+"scripts/wifi_rest.sh" = "/home/alchemmist/scripts/wifi_rest.sh"
 "scripts/wireguard-manager.sh" = "/home/alchemmist/scripts/wireguard-manager.sh"
 "ssh/config" = "/home/alchemmist/.ssh/config"
 "sway/config" = "/home/alchemmist/.config/sway/config"
@@ -132,7 +134,6 @@
 "wallpapers/cities/darkcity-141C3.jpeg" = "/home/alchemmist/Pictures/wallpapers/cities/darkcity-141C3.jpeg"
 "wallpapers/cities/gm85u1w0dgi51-4F830.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/gm85u1w0dgi51-4F830.jpg"
 "wallpapers/cities/gorod-zima-sneg-ulitsa-zdaniia-doroga-fonari-ogni-vyveski-ne.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/gorod-zima-sneg-ulitsa-zdaniia-doroga-fonari-ogni-vyveski-ne.jpg"
-"wallpapers/cities/israel-sundseth-1683-unsplash-4CC6D.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/israel-sundseth-1683-unsplash-4CC6D.jpg"
 "wallpapers/cities/iurii-stolypin-piter-sankt-peterburg-gorod-ulitsy-doma-zdani.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/iurii-stolypin-piter-sankt-peterburg-gorod-ulitsy-doma-zdani.jpg"
 "wallpapers/cities/santiago-chile-sundown.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/santiago-chile-sundown.jpg"
 "wallpapers/cities/sdghsfghsrthsrt-C88A2.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/sdghsfghsrthsrt-C88A2.jpg"
@@ -140,7 +141,6 @@
 "wallpapers/cities/unknown-AA38F.png" = "/home/alchemmist/Pictures/wallpapers/cities/unknown-AA38F.png"
 "wallpapers/cities/wallhaven-l8pjpp.png" = "/home/alchemmist/Pictures/wallpapers/cities/wallhaven-l8pjpp.png"
 "wallpapers/cities/wallhaven-rrgyz7.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/wallhaven-rrgyz7.jpg"
-"wallpapers/cities/zvezdnoe-nebo-noch-priroda-peizazh-5.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/zvezdnoe-nebo-noch-priroda-peizazh-5.jpg"
 "wallpapers/meme/5079093.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/5079093.jpg"
 "wallpapers/meme/5079093_1.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/5079093_1.jpg"
 "wallpapers/meme/funvidia-7648B.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/funvidia-7648B.jpg"
@@ -161,37 +161,37 @@
 "wallpapers/nature/badfon-italiya-ozero-lago-madzhore.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/badfon-italiya-ozero-lago-madzhore.jpg"
 "wallpapers/nature/clouds-peaks-mountains-night-evening.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/clouds-peaks-mountains-night-evening.jpg"
 "wallpapers/nature/comet-mountains-trees-rocks-stars-trail-astronomy-lights-lon.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/comet-mountains-trees-rocks-stars-trail-astronomy-lights-lon.jpg"
-"wallpapers/nature/dreamy-sunrise-sunlight-tenerife-canarias-spain-voskhod-soln.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/dreamy-sunrise-sunlight-tenerife-canarias-spain-voskhod-soln.jpg"
 "wallpapers/nature/forest-trees-road-lights-winter-snow-snowy-snowy-landscape-m.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/forest-trees-road-lights-winter-snow-snowy-snowy-landscape-m.jpg"
 "wallpapers/nature/frantsiia-alpy-rassvet-zima-sneg-gory-skaly-nebo-derevia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/frantsiia-alpy-rassvet-zima-sneg-gory-skaly-nebo-derevia.jpg"
 "wallpapers/nature/grenlandiia-ford-skorsbi-priroda-peizazh-gory-aisbergi-ldiny.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/grenlandiia-ford-skorsbi-priroda-peizazh-gory-aisbergi-ldiny.jpg"
 "wallpapers/nature/kanada-jacques-cartier-park.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/kanada-jacques-cartier-park.jpg"
 "wallpapers/nature/karijarvi-lake-finland-ozero-kariiarvi-finliandiia-zamiorz-1.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/karijarvi-lake-finland-ozero-kariiarvi-finliandiia-zamiorz-1.jpg"
+"wallpapers/nature/les-derevia-poliana-trava-leto-solntse-oboi-forest-trees-mea.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/les-derevia-poliana-trava-leto-solntse-oboi-forest-trees-mea.jpg"
 "wallpapers/nature/mammoth-lakes-california-jessica-christian.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/mammoth-lakes-california-jessica-christian.jpg"
 "wallpapers/nature/nebo-oblaka-peizazh-vetrogeneratory-11.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/nebo-oblaka-peizazh-vetrogeneratory-11.jpg"
 "wallpapers/nature/niderlandy-utro-tuman-derevia-sosny-luna-polnolunie.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/niderlandy-utro-tuman-derevia-sosny-luna-polnolunie.jpg"
 "wallpapers/nature/noch-reka-fonari-leto.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/noch-reka-fonari-leto.jpg"
 "wallpapers/nature/norvegiia-lofoteny-priroda-peizazh-gory-skaly-lofotenskie-os.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/norvegiia-lofoteny-priroda-peizazh-gory-skaly-lofotenskie-os.jpg"
-"wallpapers/nature/onega-priroda-peizazh-ozero-lesa-osen-tserkov-utro-rassvet.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/onega-priroda-peizazh-ozero-lesa-osen-tserkov-utro-rassvet.jpg"
 "wallpapers/nature/pavel-minaev-kaliazinskaia-kolokolnia-kolokolnia-kaliazin-ug.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pavel-minaev-kaliazinskaia-kolokolnia-kolokolnia-kaliazin-ug.jpg"
 "wallpapers/nature/peizazh-ozero-gory-sneg-zima.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peizazh-ozero-gory-sneg-zima.jpg"
+"wallpapers/nature/peizazh-priroda-sumerki-tuman-mrak-derevia-doroga-nebo.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peizazh-priroda-sumerki-tuman-mrak-derevia-doroga-nebo.jpg"
 "wallpapers/nature/peizazh-zakat-derevo.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peizazh-zakat-derevo.jpg"
 "wallpapers/nature/pole-kholmy-ograzhdenie-tuman-trava-derevo.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pole-kholmy-ograzhdenie-tuman-trava-derevo.jpg"
+"wallpapers/nature/pole-sneg-doroga.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pole-sneg-doroga.jpg"
 "wallpapers/nature/polsha-osen-utro-rassvet-tuman-reka-derevo-otrazhenie.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/polsha-osen-utro-rassvet-tuman-reka-derevo-otrazhenie.jpg"
-"wallpapers/nature/priroda-gory-nebo-solntse-zakat-oblaka-tuman.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-nebo-solntse-zakat-oblaka-tuman.jpg"
 "wallpapers/nature/priroda-gory-skaly-nebo-oblaka-dolomity-rassvet.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-skaly-nebo-oblaka-dolomity-rassvet.jpg"
 "wallpapers/nature/priroda-gory-skaly-nebo-tuchi-norvegiia-norway-zakat-vecher.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-skaly-nebo-tuchi-norvegiia-norway-zakat-vecher.jpg"
 "wallpapers/nature/priroda-gory-sneg-zima-nebo-derevia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-sneg-zima-nebo-derevia.jpg"
 "wallpapers/nature/priroda-peizazh-gory-sneg-zima-skaly-gorizont-sugroby-nebo-8.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-gory-sneg-zima-skaly-gorizont-sugroby-nebo-8.jpg"
 "wallpapers/nature/priroda-peizazh-les-derevia-zima-sneg-ruchei-chelovek-svet.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-les-derevia-zima-sneg-ruchei-chelovek-svet.jpg"
-"wallpapers/nature/priroda-pole-derevia-peizazh-zakat.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-pole-derevia-peizazh-zakat.jpg"
+"wallpapers/nature/priroda-peizazh-okean-4.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-okean-4.jpg"
 "wallpapers/nature/priroda-skaly-gory-sneg-zima-tuman.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-skaly-gory-sneg-zima-tuman.jpg"
 "wallpapers/nature/priroda-skaly-zakat-sneg-tuman-nebo.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-skaly-zakat-sneg-tuman-nebo.jpg"
+"wallpapers/nature/priroda-vecher-gory-skaly-kanada-ozero-nebo-luna-oblaka.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-vecher-gory-skaly-kanada-ozero-nebo-luna-oblaka.jpg"
 "wallpapers/nature/pustynia-pesok-priroda-peizazh-3.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pustynia-pesok-priroda-peizazh-3.jpg"
 "wallpapers/nature/rene-unger-priroda-peizazh-bavariia-gory-alpy-kholmy-doroga.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/rene-unger-priroda-peizazh-bavariia-gory-alpy-kholmy-doroga.jpg"
 "wallpapers/nature/river-winter-park-snow.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/river-winter-park-snow.jpg"
 "wallpapers/nature/tuchi-dozhd-prichal-more-korabli-rossiia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/tuchi-dozhd-prichal-more-korabli-rossiia.jpg"
-"wallpapers/nature/tuman-priroda-peizazh-les.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/tuman-priroda-peizazh-les.jpg"
 "wallpapers/nature/vlad-sokolovskii-svanskaia-osen-vid-sverkhu-mashina-derevia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/vlad-sokolovskii-svanskaia-osen-vid-sverkhu-mashina-derevia.jpg"
 "wallpapers/nature/wallhaven-7p8783.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-7p8783.jpg"
 "wallpapers/nature/wallhaven-85lk8k.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-85lk8k.jpg"
@@ -200,16 +200,12 @@
 "wallpapers/nature/zima-priroda-peizazh-les-5.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/zima-priroda-peizazh-les-5.jpg"
 "wallpapers/nature/zima-priroda-peizazh-les-9.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/zima-priroda-peizazh-les-9.jpg"
 "wallpapers/replace_simlinks.py" = "/home/alchemmist/Pictures/wallpapers/replace_simlinks.py"
-"wallpapers/space/IMG_20200603_210356-1C874.jpg" = "/home/alchemmist/Pictures/wallpapers/space/IMG_20200603_210356-1C874.jpg"
 "wallpapers/space/apod1_copy.original-A8C5C.jpg" = "/home/alchemmist/Pictures/wallpapers/space/apod1_copy.original-A8C5C.jpg"
 "wallpapers/space/cc-BBA21.jpg" = "/home/alchemmist/Pictures/wallpapers/space/cc-BBA21.jpg"
 "wallpapers/space/wallhaven-2e8e8m.jpg" = "/home/alchemmist/Pictures/wallpapers/space/wallhaven-2e8e8m.jpg"
 "wallpapers/space/wallhaven-45yrr7.jpg" = "/home/alchemmist/Pictures/wallpapers/space/wallhaven-45yrr7.jpg"
-"wallpapers/space/wallhaven-48jw5k.jpg" = "/home/alchemmist/Pictures/wallpapers/space/wallhaven-48jw5k.jpg"
 "wallpapers/space/wallhaven-4ve6y8.jpg" = "/home/alchemmist/Pictures/wallpapers/space/wallhaven-4ve6y8.jpg"
 "wallpapers/space/wallhaven-4xroz4.jpg" = "/home/alchemmist/Pictures/wallpapers/space/wallhaven-4xroz4.jpg"
-"wallpapers/space/wallhaven-766ojy.jpg" = "/home/alchemmist/Pictures/wallpapers/space/wallhaven-766ojy.jpg"
-"wallpapers/space/wallhaven-eyp3ro.png" = "/home/alchemmist/Pictures/wallpapers/space/wallhaven-eyp3ro.png"
 "waybar/hypr-config.json" = "/home/alchemmist/.config/waybar/hypr-config.json"
 "waybar/hypr-style.css" = "/home/alchemmist/.config/waybar/hypr-style.css"
 "waybar/scripts/baraction" = "/home/alchemmist/.config/waybar/scripts/baraction"
