--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,7 +25,7 @@ exec-once = ulauncher --hide-window --no-window-shadow &
 # # # My applications # # #
 exec-once = [workspace 1; float; size 1150 750] kitty tmux
 exec-once = [workspace 2; float; size 1485 1090] google-chrome-stable --ozone-platform-hint=auto
-exec-once = [workspace 3; float; size 1144 934; move 64 88] time-desktop
+exec-once = [workspace 3] time-desktop
 exec-once = [workspace 3; float; size 600 1018; move 1261 97] telegram-desktop
 
 #############################
@@ -96,6 +96,10 @@ decoration {
 layerrule = noanim, hyprpicker
 layerrule = noanim, selection
 
+
+
+
+# AS DEFAULT SMOOF
 animations {
     enabled = true
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
@@ -107,6 +111,8 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
+
+# UP -> DOWN
 # animations {
 #     enabled = yes
 #
@@ -303,6 +309,7 @@ windowrulev2=size 700 600,class:^(imv)$
 # TiMe
 windowrulev2=float,class:^(TiMe)$
 windowrulev2=move 64 88,class:^(TiMe)$
+windowrulev2=size 1144 934,class:^(TiMe)$
 
 # Obsidian
 windowrulev2=size 1140 963,class:^(obsidian)$
@@ -310,11 +317,16 @@ windowrulev2=move 390 135,class:^(obsidian)$
 windowrulev2=workspace 10,class:^(obsidian)$
 windowrulev2=pseudotile,class:^(obsidian)$
 
+# Telegram Desktop
+windowrulev2 = float,initialTitle:^(Telegram)$
+windowrulev2 = size 600 1018,initialTitle:^(Telegram)$
+windowrulev2 = move 1261 97,initialTitle:^(Telegram)$
 
 # Telegram Image Preview
 windowrulev2 = float,title:^(Media viewer)$
 windowrulev2 = size 1890 1145,title:^(Media viewer)$
 windowrulev2 = move 15 45,title:^(Media viewer)$
+
 
 # Syncthing
 windowrulev2 = float,title:^(Syncthing)$
@@ -349,6 +361,11 @@ windowrulev2 = center,title:^(Save File)$
 windowrulev2 = float, class:^(qimgv)$
 windowrulev2 = float, class:^(qimgv)$
 
+# Nomacs
+windowrulev2 = float, class:^(org.nomacs.ImageLounge)$
+windowrulev2 = size 800 800,class:^(org.nomacs.ImageLounge)$
+windowrulev2 = move 300 100,class:^(org.nomacs.ImageLounge)$
+
 # Custom wallpaper pack selector
 windowrulev2 = float, title:^wallpaper_pack_selector$
 windowrulev2 = center, title:^wallpaper_pack_selector$
@@ -381,6 +398,11 @@ windowrulev2 = size 600 600,class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float,class:^(org.zealdocs.zeal)$
 windowrulev2 = size 960 980,class:^(org.zealdocs.zeal)$
 windowrulev2 = move 880 115,class:^(org.zealdocs.zeal)$
+
+# thunar
+windowrulev2 = float,class:^(Thunar)$
+windowrulev2 = center,class:^(Thunar)$
+windowrulev2 = size 600 600,class:^(Thunar)$
 
 # thunar
 windowrulev2 = float,class:^(thunar)$
