--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -166,11 +166,33 @@ run 'cut -c3- "$TMUX_CONF" | sh -s _apply_configuration'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'omerxx/tmux-sessionx'
+
+bind w choose-window
+unbind e
+set -g @sessionx-bind 'e'
+set -g @sessionx-window-height '90%'
+set -g @sessionx-window-width '80%'
+
+set -g @sessionx-filter-current 'false'
+set -g @sessionx-window-mode 'on'
+set -g @sessionx-zoxide-mode 'on'
+set -g @sessionx-preview-location 'right'
+set -g @sessionx-preview-ratio '70%'
+set -g @sessionx-preview-enabled 'true'
+set -g @sessionx-layout 'default'
+set -g @sessionx-prompt " "
+set -g @sessionx-pointer ">"
+set -g @sessionx-ls-command 'tree'
+set -g @sessionx-custom-paths ""
+set -g @sessionx-custom-paths-subdirectories 'true'
+
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-strategy-zsh 'session'
 set -g @resurrect-capture-pane-contents 'on'
+
 
 
 # EOF
