--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -34,6 +34,8 @@ depends = [
 [tmux.files]
 "tmux/.tmux.conf" = "~/.tmux.conf"
 "tmux/.tmux.conf.local" = "~/.tmux.conf.local"
+"tmux/tmux-sessionx" = "~/.tmux/plugins/tmux-sessionx"
+
 
 [sway.files]
 "sway" = "~/.config/sway"
