setup nvim for java development

--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -11,6 +11,7 @@
 "kitty/kitty.conf" = "/home/alchemmist/.config/kitty/kitty.conf"
 "kitty/mocha.conf" = "/home/alchemmist/.config/kitty/mocha.conf"
 "mako/config" = "/home/alchemmist/.config/mako/config"
+"nvim/ftplugin/java.lua" = "/home/alchemmist/.config/nvim/ftplugin/java.lua"
 "nvim/init.lua" = "/home/alchemmist/.config/nvim/init.lua"
 "nvim/lazy-lock.json" = "/home/alchemmist/.config/nvim/lazy-lock.json"
 "nvim/lua/core/bootstrap.lua" = "/home/alchemmist/.config/nvim/lua/core/bootstrap.lua"
@@ -20,7 +21,6 @@
 "nvim/lua/core/utils.lua" = "/home/alchemmist/.config/nvim/lua/core/utils.lua"
 "nvim/lua/plugins/configs/cmp.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/cmp.lua"
 "nvim/lua/plugins/configs/conform.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/conform.lua"
-"nvim/lua/plugins/configs/java.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/java.lua"
 "nvim/lua/plugins/configs/lazy_nvim.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lazy_nvim.lua"
 "nvim/lua/plugins/configs/lspconfig.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lspconfig.lua"
 "nvim/lua/plugins/configs/mason.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/mason.lua"
@@ -33,6 +33,7 @@
 "scripts/ask_pass.css" = "/home/alchemmist/scripts/ask_pass.css"
 "scripts/battery_stat.sh" = "/home/alchemmist/scripts/battery_stat.sh"
 "scripts/create_tex_figure.sh" = "/home/alchemmist/scripts/create_tex_figure.sh"
+"scripts/docker.sh" = "/home/alchemmist/scripts/docker.sh"
 "scripts/google-calendar.py" = "/home/alchemmist/scripts/google-calendar.py"
 "scripts/mp4-speed-up.sh" = "/home/alchemmist/scripts/mp4-speed-up.sh"
 "scripts/notification_mode.sh" = "/home/alchemmist/scripts/notification_mode.sh"
@@ -161,50 +162,55 @@
 "wallpapers/nature/aleksandr-medvedev-istra-reka-utro-voskhod-tuman.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/aleksandr-medvedev-istra-reka-utro-voskhod-tuman.jpg"
 "wallpapers/nature/anna-politova-teriberka-kolskii-poluostrov-korabl-utro-rassv.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/anna-politova-teriberka-kolskii-poluostrov-korabl-utro-rassv.jpg"
 "wallpapers/nature/antarktida-more-aisbergi-ldiny.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/antarktida-more-aisbergi-ldiny.jpg"
-"wallpapers/nature/anton-kononov-zima-sneg-derevia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/anton-kononov-zima-sneg-derevia.jpg"
 "wallpapers/nature/arkhangelskaia-oblast-peizazh-zima-tserkov-maksim-evdokimov.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/arkhangelskaia-oblast-peizazh-zima-tserkov-maksim-evdokimov.jpg"
-"wallpapers/nature/avstriia-priroda-peizazh-ozero-lesa-galshtat-zima-sneg-kommu.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/avstriia-priroda-peizazh-ozero-lesa-galshtat-zima-sneg-kommu.jpg"
-"wallpapers/nature/badfon-italiya-ozero-lago-madzhore.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/badfon-italiya-ozero-lago-madzhore.jpg"
 "wallpapers/nature/clouds-peaks-mountains-night-evening.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/clouds-peaks-mountains-night-evening.jpg"
 "wallpapers/nature/comet-mountains-trees-rocks-stars-trail-astronomy-lights-lon.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/comet-mountains-trees-rocks-stars-trail-astronomy-lights-lon.jpg"
+"wallpapers/nature/doroga-nebo-mashiny-ozero-vesna-vecher-fonari-rossiia-sumerk.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/doroga-nebo-mashiny-ozero-vesna-vecher-fonari-rossiia-sumerk.jpg"
 "wallpapers/nature/forest-trees-road-lights-winter-snow-snowy-snowy-landscape-m.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/forest-trees-road-lights-winter-snow-snowy-snowy-landscape-m.jpg"
 "wallpapers/nature/frantsiia-alpy-rassvet-zima-sneg-gory-skaly-nebo-derevia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/frantsiia-alpy-rassvet-zima-sneg-gory-skaly-nebo-derevia.jpg"
 "wallpapers/nature/grenlandiia-ford-skorsbi-priroda-peizazh-gory-aisbergi-ldiny.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/grenlandiia-ford-skorsbi-priroda-peizazh-gory-aisbergi-ldiny.jpg"
 "wallpapers/nature/kanada-jacques-cartier-park.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/kanada-jacques-cartier-park.jpg"
 "wallpapers/nature/karijarvi-lake-finland-ozero-kariiarvi-finliandiia-zamiorz-1.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/karijarvi-lake-finland-ozero-kariiarvi-finliandiia-zamiorz-1.jpg"
 "wallpapers/nature/les-derevia-poliana-trava-leto-solntse-oboi-forest-trees-mea.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/les-derevia-poliana-trava-leto-solntse-oboi-forest-trees-mea.jpg"
+"wallpapers/nature/lofoten-air-norway-88.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/lofoten-air-norway-88.jpg"
 "wallpapers/nature/mammoth-lakes-california-jessica-christian.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/mammoth-lakes-california-jessica-christian.jpg"
+"wallpapers/nature/nature-landscape-mountains-trees-forest-snow-winter-plants-c.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/nature-landscape-mountains-trees-forest-snow-winter-plants-c.jpg"
+"wallpapers/nature/nature-landscape-water-boat-sky-clear-sky-reflection-glowing.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/nature-landscape-water-boat-sky-clear-sky-reflection-glowing.jpg"
 "wallpapers/nature/nebo-oblaka-peizazh-vetrogeneratory-11.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/nebo-oblaka-peizazh-vetrogeneratory-11.jpg"
-"wallpapers/nature/niderlandy-utro-tuman-derevia-sosny-luna-polnolunie.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/niderlandy-utro-tuman-derevia-sosny-luna-polnolunie.jpg"
-"wallpapers/nature/noch-reka-fonari-leto.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/noch-reka-fonari-leto.jpg"
+"wallpapers/nature/new-zealand-river-mountains.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/new-zealand-river-mountains.jpg"
+"wallpapers/nature/niderlandy-osen-les-derevia-1.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/niderlandy-osen-les-derevia-1.jpg"
 "wallpapers/nature/norvegiia-lofoteny-priroda-peizazh-gory-skaly-lofotenskie-os.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/norvegiia-lofoteny-priroda-peizazh-gory-skaly-lofotenskie-os.jpg"
 "wallpapers/nature/pavel-minaev-kaliazinskaia-kolokolnia-kolokolnia-kaliazin-ug.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pavel-minaev-kaliazinskaia-kolokolnia-kolokolnia-kaliazin-ug.jpg"
 "wallpapers/nature/peizazh-ozero-gory-sneg-zima.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peizazh-ozero-gory-sneg-zima.jpg"
-"wallpapers/nature/peizazh-priroda-sumerki-tuman-mrak-derevia-doroga-nebo.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peizazh-priroda-sumerki-tuman-mrak-derevia-doroga-nebo.jpg"
+"wallpapers/nature/peizazh-ozero-prichal-noch.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peizazh-ozero-prichal-noch.jpg"
 "wallpapers/nature/peizazh-zakat-derevo.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peizazh-zakat-derevo.jpg"
+"wallpapers/nature/peyzazh-gory-nebo-oblaka.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peyzazh-gory-nebo-oblaka.jpg"
+"wallpapers/nature/peyzazh-vecher-zakat-reka.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peyzazh-vecher-zakat-reka.jpg"
+"wallpapers/nature/peyzazhi-noch-ozero-voda-dom.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peyzazhi-noch-ozero-voda-dom.jpg"
+"wallpapers/nature/pink-mountain-sky-at-night.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pink-mountain-sky-at-night.jpg"
 "wallpapers/nature/pole-kholmy-ograzhdenie-tuman-trava-derevo.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pole-kholmy-ograzhdenie-tuman-trava-derevo.jpg"
 "wallpapers/nature/pole-sneg-doroga.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pole-sneg-doroga.jpg"
+"wallpapers/nature/pole-tuman-priroda-peizazh-2.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pole-tuman-priroda-peizazh-2.jpg"
 "wallpapers/nature/polsha-osen-utro-rassvet-tuman-reka-derevo-otrazhenie.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/polsha-osen-utro-rassvet-tuman-reka-derevo-otrazhenie.jpg"
-"wallpapers/nature/priroda-gory-skaly-nebo-oblaka-dolomity-rassvet.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-skaly-nebo-oblaka-dolomity-rassvet.jpg"
-"wallpapers/nature/priroda-gory-skaly-nebo-tuchi-norvegiia-norway-zakat-vecher.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-skaly-nebo-tuchi-norvegiia-norway-zakat-vecher.jpg"
+"wallpapers/nature/priroda-derevya-les-tuman-6583.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-derevya-les-tuman-6583.jpg"
 "wallpapers/nature/priroda-gory-sneg-zima-nebo-derevia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-sneg-zima-nebo-derevia.jpg"
+"wallpapers/nature/priroda-peizazh-gory-sneg-zima-skaly-gorizont-sugroby-nebo-5.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-gory-sneg-zima-skaly-gorizont-sugroby-nebo-5.jpg"
 "wallpapers/nature/priroda-peizazh-gory-sneg-zima-skaly-gorizont-sugroby-nebo-8.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-gory-sneg-zima-skaly-gorizont-sugroby-nebo-8.jpg"
 "wallpapers/nature/priroda-peizazh-les-derevia-zima-sneg-ruchei-chelovek-svet.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-les-derevia-zima-sneg-ruchei-chelovek-svet.jpg"
+"wallpapers/nature/priroda-peizazh-nebo-gorizont-zima-sneg-sugroby-derevia-le-1.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-nebo-gorizont-zima-sneg-sugroby-derevia-le-1.jpg"
+"wallpapers/nature/priroda-peizazh-nebo-oblaka-gorizont-gory-skaly-zima-sneg--2.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-nebo-oblaka-gorizont-gory-skaly-zima-sneg--2.jpg"
+"wallpapers/nature/priroda-peizazh-nebo-oblaka-zima-sneg-sugroby-derevia-les--1.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-nebo-oblaka-zima-sneg-sugroby-derevia-les--1.jpg"
 "wallpapers/nature/priroda-peizazh-okean-4.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-okean-4.jpg"
+"wallpapers/nature/priroda-peyzazh-les-zima-doma.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peyzazh-les-zima-doma.jpg"
 "wallpapers/nature/priroda-skaly-gory-sneg-zima-tuman.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-skaly-gory-sneg-zima-tuman.jpg"
-"wallpapers/nature/priroda-skaly-zakat-sneg-tuman-nebo.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-skaly-zakat-sneg-tuman-nebo.jpg"
 "wallpapers/nature/priroda-vecher-gory-skaly-kanada-ozero-nebo-luna-oblaka.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-vecher-gory-skaly-kanada-ozero-nebo-luna-oblaka.jpg"
 "wallpapers/nature/pustynia-pesok-priroda-peizazh-3.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pustynia-pesok-priroda-peizazh-3.jpg"
 "wallpapers/nature/rene-unger-priroda-peizazh-bavariia-gory-alpy-kholmy-doroga.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/rene-unger-priroda-peizazh-bavariia-gory-alpy-kholmy-doroga.jpg"
 "wallpapers/nature/river-winter-park-snow.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/river-winter-park-snow.jpg"
-"wallpapers/nature/tuchi-dozhd-prichal-more-korabli-rossiia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/tuchi-dozhd-prichal-more-korabli-rossiia.jpg"
-"wallpapers/nature/vlad-sokolovskii-svanskaia-osen-vid-sverkhu-mashina-derevia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/vlad-sokolovskii-svanskaia-osen-vid-sverkhu-mashina-derevia.jpg"
 "wallpapers/nature/wallhaven-7p8783.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-7p8783.jpg"
 "wallpapers/nature/wallhaven-85lk8k.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-85lk8k.jpg"
 "wallpapers/nature/wallhaven-zyk6ko.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-zyk6ko.jpg"
-"wallpapers/nature/zakat-gory-batraz-tabuev.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/zakat-gory-batraz-tabuev.jpg"
 "wallpapers/nature/zima-priroda-peizazh-les-5.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/zima-priroda-peizazh-les-5.jpg"
-"wallpapers/nature/zima-priroda-peizazh-les-9.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/zima-priroda-peizazh-les-9.jpg"
 "wallpapers/replace_simlinks.py" = "/home/alchemmist/Pictures/wallpapers/replace_simlinks.py"
 "wallpapers/space/apod1_copy.original-A8C5C.jpg" = "/home/alchemmist/Pictures/wallpapers/space/apod1_copy.original-A8C5C.jpg"
 "wallpapers/space/cc-BBA21.jpg" = "/home/alchemmist/Pictures/wallpapers/space/cc-BBA21.jpg"
