--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,8 @@ bind C-a send-prefix
 
 bind-key C-z set-option -g status
 
+bind-key w choose-tree -ZwN
+bind-key s choose-tree -ZsN
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
@@ -89,6 +91,11 @@ bind < swap-pane -U       # swap current pane with the previous one
 
 # maximize current pane
 bind + run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D'"
+
+# swap tabs
+bind-key -n M-h swap-window -t -1 -d
+bind-key -n M-l swap-window -t +1 -d
+
 
 # pane resizing
 bind -r H resize-pane -L 2
@@ -169,6 +176,14 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'omerxx/tmux-sessionx'
 
 bind w choose-window
+
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-strategy-zsh 'session'
+set -g @resurrect-capture-pane-contents 'on'
+
+
 unbind e
 set -g @sessionx-bind 'e'
 set -g @sessionx-window-height '90%'
@@ -186,12 +201,6 @@ set -g @sessionx-pointer ">"
 set -g @sessionx-ls-command 'tree'
 set -g @sessionx-custom-paths ""
 set -g @sessionx-custom-paths-subdirectories 'true'
-
-set -g @continuum-restore 'on'
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-strategy-zsh 'session'
-set -g @resurrect-capture-pane-contents 'on'
 
 
 # EOF
