add config for helix

--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -3,6 +3,9 @@
 "fastfetch/config.jsonc" = "/home/alchemmist/.config/fastfetch/config.jsonc"
 "ghostty/config" = "/home/alchemmist/.config/ghostty/config"
 "git/.gitconfig" = "/home/alchemmist/.gitconfig"
+"helix/config.toml" = "/home/alchemmist/.config/helix/config.toml"
+"helix/languages.toml" = "/home/alchemmist/.config/helix/languages.toml"
+"helix/themes/nothing.toml" = "/home/alchemmist/.config/helix/themes/nothing.toml"
 "hypr/hypridle.conf" = "/home/alchemmist/.config/hypr/hypridle.conf"
 "hypr/hyprland.conf" = "/home/alchemmist/.config/hypr/hyprland.conf"
 "hypr/hyprlock.conf" = "/home/alchemmist/.config/hypr/hyprlock.conf"
