--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -19,6 +19,7 @@ depends = [
     "mako",
     "vim",
     "ghostty",
+    "helix",
 ]
 
 
@@ -81,3 +82,6 @@ depends = [
 
 [ghostty.files]
 "ghostty" = "~/.config/ghostty"
+
+[helix.files]
+"helix" = "~/.config/helix"
