--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -39,6 +39,7 @@
 "scripts/docker.sh" = "/home/alchemmist/scripts/docker.sh"
 "scripts/google-calendar.py" = "/home/alchemmist/scripts/google-calendar.py"
 "scripts/mp4-speed-up.sh" = "/home/alchemmist/scripts/mp4-speed-up.sh"
+"scripts/mp42gif.sh" = "/home/alchemmist/scripts/mp42gif.sh"
 "scripts/notification_mode.sh" = "/home/alchemmist/scripts/notification_mode.sh"
 "scripts/obsidian_rm_note.py" = "/home/alchemmist/scripts/obsidian_rm_note.py"
 "scripts/requirements.txt" = "/home/alchemmist/scripts/requirements.txt"
@@ -168,6 +169,7 @@
 "wallpapers/nature/arkhangelskaia-oblast-peizazh-zima-tserkov-maksim-evdokimov.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/arkhangelskaia-oblast-peizazh-zima-tserkov-maksim-evdokimov.jpg"
 "wallpapers/nature/clouds-peaks-mountains-night-evening.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/clouds-peaks-mountains-night-evening.jpg"
 "wallpapers/nature/comet-mountains-trees-rocks-stars-trail-astronomy-lights-lon.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/comet-mountains-trees-rocks-stars-trail-astronomy-lights-lon.jpg"
+"wallpapers/nature/daxue-mountains-sichuan-china-mountains-water-reflection-sno.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/daxue-mountains-sichuan-china-mountains-water-reflection-sno.jpg"
 "wallpapers/nature/doroga-nebo-mashiny-ozero-vesna-vecher-fonari-rossiia-sumerk.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/doroga-nebo-mashiny-ozero-vesna-vecher-fonari-rossiia-sumerk.jpg"
 "wallpapers/nature/forest-trees-road-lights-winter-snow-snowy-snowy-landscape-m.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/forest-trees-road-lights-winter-snow-snowy-snowy-landscape-m.jpg"
 "wallpapers/nature/frantsiia-alpy-rassvet-zima-sneg-gory-skaly-nebo-derevia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/frantsiia-alpy-rassvet-zima-sneg-gory-skaly-nebo-derevia.jpg"
@@ -188,8 +190,6 @@
 "wallpapers/nature/peizazh-ozero-prichal-noch.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peizazh-ozero-prichal-noch.jpg"
 "wallpapers/nature/peizazh-zakat-derevo.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peizazh-zakat-derevo.jpg"
 "wallpapers/nature/peyzazh-gory-nebo-oblaka.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peyzazh-gory-nebo-oblaka.jpg"
-"wallpapers/nature/peyzazh-vecher-zakat-reka.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peyzazh-vecher-zakat-reka.jpg"
-"wallpapers/nature/peyzazhi-noch-ozero-voda-dom.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peyzazhi-noch-ozero-voda-dom.jpg"
 "wallpapers/nature/pink-mountain-sky-at-night.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pink-mountain-sky-at-night.jpg"
 "wallpapers/nature/pole-kholmy-ograzhdenie-tuman-trava-derevo.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pole-kholmy-ograzhdenie-tuman-trava-derevo.jpg"
 "wallpapers/nature/pole-sneg-doroga.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/pole-sneg-doroga.jpg"
@@ -221,6 +221,7 @@
 "wallpapers/space/wallhaven-45yrr7.jpg" = "/home/alchemmist/Pictures/wallpapers/space/wallhaven-45yrr7.jpg"
 "wallpapers/space/wallhaven-4ve6y8.jpg" = "/home/alchemmist/Pictures/wallpapers/space/wallhaven-4ve6y8.jpg"
 "wallpapers/space/wallhaven-4xroz4.jpg" = "/home/alchemmist/Pictures/wallpapers/space/wallhaven-4xroz4.jpg"
+"wallpapers/white/bg.png" = "/home/alchemmist/Pictures/wallpapers/white/bg.png"
 "waybar/hypr-config.json" = "/home/alchemmist/.config/waybar/hypr-config.json"
 "waybar/hypr-style.css" = "/home/alchemmist/.config/waybar/hypr-style.css"
 "waybar/scripts/baraction" = "/home/alchemmist/.config/waybar/scripts/baraction"
