nvim disable auto open signature

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -207,7 +207,7 @@ bind = $mainMod, O, togglesplit, # dwindle
 bind = ALT, SPACE, exec, ulauncher-toggle --no-window-shadow # Show the graphicall app launcher
 bind = $mainMod, S, exec, flameshot gui --path=$HOME/Pictures/screenshots/ --clipboard # take a screenshot
 bind = ,F12, exec,grim -g "$(slurp)" - | tee ~/Pictures/screenshots/$(date +%Y-%m-%d_%H-%M-%S).png | wl-copy
-bind = $mainMod SHIFT, R, exec, killall waybar ; waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css
+bind = $mainMod SHIFT, R, exec, nmcli dev wifi rescan ; killall waybar ; waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css 
 bind = $mainMod, W, exec, ~/scripts/swww_random.sh
 bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/wallpaper_pack_selector.sh
 bind = $mainMod, V, exec, ~/scripts/wireguard-manager.sh -t && pkill -SIGRTMIN+1 waybar
@@ -216,6 +216,7 @@ bind = CTRL, apostrophe, exec, wtype -P right -p right
 bind = $mainMod SHIFT, C, exec, kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
 bind = $mainMod SHIFT, T, exec, kitty --title termdown -e termdown 
 bind = $mainMod,F,fullscreen
+
 # bind = $mainMod, SPACE, exec, wofi-emoji
 # bind = $mainMod, R, exec, ffmpeg -f alsa -i default -acodec libmp3lame -ab 192k /home/alchemmist/recordings/$(date +\%Y-\%m-\%d_\%H-\%M-\%S).mp3
 
