--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -96,6 +96,8 @@ bind + run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D
 bind-key -n M-h swap-window -t -1 -d
 bind-key -n M-l swap-window -t +1 -d
 
+# kill pane without conform
+bind-key BSpace kill-pane
 
 # pane resizing
 bind -r H resize-pane -L 2
