macos like screenshot

--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -38,10 +38,13 @@
 "scripts/create_tex_figure.sh" = "/home/alchemmist/scripts/create_tex_figure.sh"
 "scripts/docker.sh" = "/home/alchemmist/scripts/docker.sh"
 "scripts/google-calendar.py" = "/home/alchemmist/scripts/google-calendar.py"
+"scripts/macos-screenshot.sh" = "/home/alchemmist/scripts/macos-screenshot.sh"
 "scripts/mp4-speed-up.sh" = "/home/alchemmist/scripts/mp4-speed-up.sh"
 "scripts/mp42gif.sh" = "/home/alchemmist/scripts/mp42gif.sh"
 "scripts/notification_mode.sh" = "/home/alchemmist/scripts/notification_mode.sh"
 "scripts/obsidian_rm_note.py" = "/home/alchemmist/scripts/obsidian_rm_note.py"
+"scripts/png-radius.sh" = "/home/alchemmist/scripts/png-radius.sh"
+"scripts/png-shadow.sh" = "/home/alchemmist/scripts/png-shadow.sh"
 "scripts/requirements.txt" = "/home/alchemmist/scripts/requirements.txt"
 "scripts/rofi.rasi" = "/home/alchemmist/scripts/rofi.rasi"
 "scripts/simlink-copier.sh" = "/home/alchemmist/scripts/simlink-copier.sh"
