--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -206,7 +206,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = ALT, SPACE, exec, ulauncher-toggle --no-window-shadow # Show the graphicall app launcher
 bind = $mainMod, S, exec, flameshot gui --path=$HOME/Pictures/screenshots/ --clipboard # take a screenshot
-bind = ,F12, exec,grim -g "$(slurp)" - | tee ~/Pictures/screenshots/$(date +%Y-%m-%d_%H-%M-%S).png | wl-copy
+bind = ,F12, exec, ~/scripts/macos-screenshot.sh
 bind = $mainMod SHIFT, R, exec, nmcli dev wifi rescan ; killall waybar ; waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css 
 bind = $mainMod, W, exec, ~/scripts/swww_random.sh
 bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/wallpaper_pack_selector.sh
